// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for danger 1`] = `
<DocumentFragment>
  <div
    class="p-4 my-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"
    role="alert"
  >
    <p
      class="mb-0 small pb-2"
    >
      Everything is broken
    </p>
    <p
      class="mb-0 small pb-2"
    >
      Run for the hills
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot for success 1`] = `
<DocumentFragment>
  <div
    class="p-4 my-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
    role="alert"
  >
    <p
      class="mb-0 small pb-2"
    >
      Everything is awesome!
    </p>
  </div>
</DocumentFragment>
`;
